--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3.3'
+volumes:
+  media:
 services:
-
+  backend:
+    container_name: foodgram-back
+    build: ../backend
+    volumes:
+      - media:/app/media/
   frontend:
     container_name: foodgram-front
     build: ../frontend
@@ -15,3 +21,4 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - media:/media/
