Add filters and permissions

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install gunicorn==20.1.0 && \
 
 COPY . .
 
-COPY starter.sh sh_ingredients1.sh sh_ingredients2.sh sh_ingredients3.sh \
-     sh_ingredients4.sh sh_ingredients5.sh sh_ingredients6.sh .
+# COPY starter.sh sh_ingredients1.sh sh_ingredients2.sh sh_ingredients3.sh \
+#      sh_ingredients4.sh sh_ingredients5.sh sh_ingredients6.sh sh_recipes.sh .
 
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
