--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     container_name: foodgram-back
     build: ../backend
     volumes:
-      - media:/app/media/
+      # - media:/app/media/
+      - media:/media/
   frontend:
     container_name: foodgram-front
     build: ../frontend
