--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -16,6 +16,11 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
   }
+  
+  location /s/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/s/;
+  }
 
   location / {
     root /usr/share/nginx/html;
