--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,30 +7,30 @@ services:
   backend:
     container_name: foodgram-back
     build: ../backend
+    env_file: ../.env
     volumes:
       - static:/backend_static/
       - media:/media/
     depends_on:
-      - database
+      - db
   frontend:
     container_name: foodgram-front
     build: ../frontend
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - ../frontend/:/app/result_build/
-  nginx:
+      - static:/frontend_static/
+  gateway:
     container_name: foodgram-proxy
-    image: nginx:1.25.4-alpine
+    build: ../nginx
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - media:/media/
       - static:/static/
     depends_on:
       - backend
-  database:
+  db:
+    container_name: foodgram-db
     image: postgres:13.10
     env_file: ../.env
     volumes:
