--- a/.isort.cfg
+++ b/.isort.cfg
@@ -8,6 +8,6 @@ known_drf_extra_fields = drf_extra_fields
 known_rest_framework = rest_framework
 known_api = api
 known_backend = backend
-known_recipes = recipies
+known_recipies = recipies
 sections = FUTURE,STDLIB,DJANGO,DJANGO_FILTERS,DJOSER,DRF_EXTRA_FIELDS,REST_FRAMEWORK,THIRDPARTY,FIRSTPARTY,API,BACKEND,RECIPIES,LOCALFOLDER
 no_lines_before = DJANGO_FILTERS,DJOSER,DRF_EXTRA_FIELDS,REST_FRAMEWORK,BACKEND,RECIPIES,LOCALFOLDER
