Update workflow, docker-composes, nginx dockerfile

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - media:/media/
       - static:/static/
+      - ./docs/:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
   db:
