--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,29 +76,10 @@ jobs:
           push: true
           tags: ${{ secrets.BACKEND_IMAGE }}
 
-  # Frontend
-  # frontend_tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - name: Set up nodeJS
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: 18
-  #   - name: Install dependencies
-  #     run: |
-  #       cd frontend/
-  #       npm ci
-  #   - name: Test frontend
-  #     run: |
-  #       cd frontend/
-  #       npm run test
-
   build_frontend_and_push_to_docker_hub:
     if: github.ref == 'refs/heads/main'
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
-    # needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
@@ -167,12 +148,13 @@ jobs:
         script: |
           cd foodgram
           sudo docker compose -f docker-compose.production.yml pull
-          : sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml down -v
           sudo docker compose -f docker-compose.production.yml up -d
-          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          : sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
-          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py db -l
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py db -l
+          : это комментарий
 
   # Notification
   send_message:
