--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,12 +148,12 @@ jobs:
         script: |
           cd foodgram
           sudo docker compose -f docker-compose.production.yml pull
-          sudo docker compose -f docker-compose.production.yml down -v
+          : sudo docker compose -f docker-compose.production.yml down -v
           sudo docker compose -f docker-compose.production.yml up -d
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py db -l
+          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+          : sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+          : sudo docker compose -f docker-compose.production.yml exec backend python manage.py db -l
           : это комментарий
 
   # Notification
