--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -150,6 +150,7 @@ jobs:
           sudo docker compose -f docker-compose.production.yml pull
           : sudo docker compose -f docker-compose.production.yml down -v
           sudo docker compose -f docker-compose.production.yml up -d
+          sudo docker system prune -af
           : sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
           : sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
           : sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
